# react-typescript-vite-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  headerConfig.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig.app.json  update.sh  vite.config.ts
generator/: BUILD.bazel
website/: BUILD.bazel  defs.bzl  eslint.config.mjs  package.json  tsconfig.app.json  vite.config.ts
website/src/: App.tsx  vite-env.d.ts
