load("@bazel_skylib//rules:write_file.bzl", "write_file")

package(default_visibility = ["//visibility:public"])

write_file(
    name = "hello_world",
    out = "hello-world.ts",
    content = [
        "export function helloWorld() {",
        "  console.log('Hello, world!');",
        "}",
    ],
)
